--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
         uses: android-actions/setup-android@main
 
       - name: Setup Haxe
-        uses: krdlab/setup-haxe@v1.1.7
+        uses: krdlab/setup-haxe@v1.2.0
         with:
           haxe-version: 4.2.5
 
@@ -50,17 +50,15 @@ jobs:
           haxelib install hxcpp > /dev/null
           haxelib install lime 7.9.0
           haxelib install openfl 9.1.0
-          haxelib --never install flixel
+          haxelib --never install flixel 4.11.0
           haxelib run lime setup flixel
           haxelib install flixel-tools
           haxelib install flixel-ui
           haxelib install hscript
-          haxelib install hxCodec --q
           haxelib install flixel-addons
-          haxelib git newgrounds https://github.com/Geokureli/Newgrounds.git
-          haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
-          haxelib git extension-webview https://github.com/Daninnocent/extension-webview --quiet
-          haxelib git extension-androidtools https://github.com/randomxdp/extension-androidtools
+          haxelib git linc_luajit https://github.com/sirox228/linc_luajit.git
+          haxelib git extension-androidtools https://github.com/MaysLastPlay77/extension-androidtools.git
+          haxelib git extension-videoview https://github.com/MaysLastPlay77/extension-videoview.git
           haxelib list
 
       - name: Create Version Tag
@@ -72,8 +70,9 @@ jobs:
           haxelib run lime config ANDROID_SDK $ANDROID_HOME
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
           haxelib run lime config JAVA_HOME $JAVA_HOME
-          haxelib set lime 7.9.0 
-          haxelib set openfl 9.1.0 
+          haxelib set lime 7.9.0
+          haxelib set openfl 9.1.0
+          haxelib set flixel 4.11.0
           haxelib run lime config ANDROID_SETUP true
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
@@ -84,5 +83,5 @@ jobs:
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
-          name: buildAndroid
+          name: androidBuild
           path: export/release/android/bin/app/build/outputs/apk/debug
