--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
           haxelib install flixel-tools
           haxelib install flixel-ui
           haxelib install hscript
-          haxelib install hxCodec --q
+          haxelib install hxCodec
           haxelib install flixel-addons
           haxelib git newgrounds https://github.com/Geokureli/Newgrounds.git
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
