--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,11 +57,11 @@ jobs:
           haxelib install hscript
           haxelib install hxCodec
           haxelib install flixel-addons
-          haxelib git linc_luajit https://github.com/sirox228/linc_luajit.git
-          haxelib git extension-androidtools https://github.com/MaysLastPlay77/extension-androidtools.git
+          haxelib git newgrounds https://github.com/Geokureli/Newgrounds.git
+          haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
           haxelib git extension-videoview https://github.com/MaysLastPlay77/extension-videoview.git
+          haxelib git extension-androidtools https://github.com/randomxdp/extension-androidtools
           haxelib list
-
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
 
@@ -84,5 +84,5 @@ jobs:
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
-          name: androidBuild
+          name: buildAndroid
           path: export/release/android/bin/app/build/outputs/apk/debug
