--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Build
+name: buildAndroid
 
 # Controls when the action will run. 
 on:
@@ -16,6 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
+
   buildAndroid:
     name: buildAndroid
     runs-on: ubuntu-latest
@@ -54,13 +55,13 @@ jobs:
           haxelib install flixel-tools
           haxelib install flixel-ui
           haxelib install hscript
-          haxelib inatall hxCodec --quiet
+          haxelib install hxCodec
           haxelib install flixel-addons
-          haxelib git linc_luajit https://github.com/sirox228/linc_luajit.git
-          haxelib git extension-androidtools https://github.com/MaysLastPlay77/extension-androidtools.git
+          haxelib git newgrounds https://github.com/Geokureli/Newgrounds.git
+          haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
           haxelib git extension-videoview https://github.com/MaysLastPlay77/extension-videoview.git
+          haxelib git extension-androidtools https://github.com/randomxdp/extension-androidtools
           haxelib list
-
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
 
@@ -83,5 +84,5 @@ jobs:
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
-          name: androidBuild
+          name: buildAndroid
           path: export/release/android/bin/app/build/outputs/apk/debug
