--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
           haxelib install hxcpp > /dev/null
           haxelib install lime 7.9.0
           haxelib install openfl 9.1.0
-          haxelib install flixel
+          haxelib --never install flixel
           haxelib run lime setup flixel
           haxelib install flixel-tools
           haxelib install flixel-ui
@@ -73,7 +73,6 @@ jobs:
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib set lime 7.9.0
           haxelib set openfl 9.1.0
-          haxelib set flixel 4.11.0
           haxelib set newgrounds 1.3.0
           haxelib run lime config ANDROID_SETUP true
         env:
