--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,8 +48,8 @@ jobs:
         run: |
           haxelib setup ~/haxelib
           haxelib install hxcpp > /dev/null
-          haxelib install lime 7.9.0
-          haxelib install openfl 9.1.0
+          haxelib install lime
+          haxelib install openfl
           haxelib --never install flixel
           haxelib run lime setup flixel
           haxelib install flixel-tools
@@ -71,8 +71,6 @@ jobs:
           haxelib run lime config ANDROID_SDK $ANDROID_HOME
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
           haxelib run lime config JAVA_HOME $JAVA_HOME
-          haxelib set lime 7.9.0
-          haxelib set openfl 9.1.0
           haxelib set newgrounds 1.3.0
           haxelib run lime config ANDROID_SETUP true
         env:
