--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,9 +55,9 @@ jobs:
           haxelib install flixel-tools
           haxelib install flixel-ui
           haxelib install hscript
-          haxelib install hxCodec
           haxelib install flixel-addons
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
+          haxelib git hxCodec https://github.com/polybiusproxy/hxCodec.git
           haxelib git extension-videoview https://github.com/MaysLastPlay77/extension-videoview.git
           haxelib git extension-androidtools https://github.com/MaysLastPlay77/extension-androidtools
           haxelib list
