--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
           haxelib install flixel-tools
           haxelib install flixel-ui
           haxelib install hscript
-          haxelib install flixel-addons
+          haxelib install flixel-addons 2.11.0
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
           haxelib git extension-videoview https://github.com/MaysLastPlay77/extension-videoview.git
           haxelib git extension-androidtools https://github.com/MaysLastPlay77/extension-androidtools
@@ -72,6 +72,7 @@ jobs:
           haxelib set flixel 4.11.0
           haxelib set openfl 9.1.0
           haxelib set lime 7.9.0
+          haxelib set flixel-addons 2.11.0
           haxelib run lime config ANDROID_SETUP true
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
