--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,14 +48,14 @@ jobs:
         run: |
           haxelib setup ~/haxelib
           haxelib install hxcpp > /dev/null
-          haxelib install lime 7.9.0
-          haxelib install openfl 9.1.0
-          haxelib --never install flixel 4.11.0
+          haxelib install lime
+          haxelib install openfl
+          haxelib --never install flixel
           haxelib run lime setup flixel
           haxelib install flixel-tools
           haxelib install flixel-ui
           haxelib install hscript
-          haxelib install flixel-addons 2.11.0
+          haxelib install flixel-addons
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
           haxelib git extension-videoview https://github.com/MaysLastPlay77/extension-videoview.git
           haxelib git extension-androidtools https://github.com/MaysLastPlay77/extension-androidtools
@@ -69,10 +69,6 @@ jobs:
           haxelib run lime config ANDROID_SDK $ANDROID_HOME
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
           haxelib run lime config JAVA_HOME $JAVA_HOME
-          haxelib set flixel 4.11.0
-          haxelib set openfl 9.1.0
-          haxelib set lime 7.9.0
-          haxelib set flixel-addons 2.11.0
           haxelib run lime config ANDROID_SETUP true
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
