--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,20 +52,23 @@ jobs:
           haxelib install openfl
           haxelib --never install flixel
           haxelib run lime setup flixel
+          haxelib run lime setup
           haxelib install flixel-tools
           haxelib install flixel-ui
-          haxelib install hscript
           haxelib install flixel-addons
+          haxelib install tjson
+          haxelib install hxjsonast
+          haxelib install hscript
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
           haxelib git extension-videoview https://github.com/MaysLastPlay77/extension-videoview.git
           haxelib git extension-androidtools https://github.com/MaysLastPlay77/extension-androidtools
+          haxelib install hxcpp-debug-server
           haxelib list
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
 
       - name: Setup Lime
         run: |
-          haxelib run lime setup -alias -y
           haxelib run lime config ANDROID_SDK $ANDROID_HOME
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
           haxelib run lime config JAVA_HOME $JAVA_HOME
