--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,7 @@ jobs:
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
           haxelib git extension-videoview https://github.com/MaysLastPlay77/extension-videoview.git
           haxelib git extension-androidtools https://github.com/MaysLastPlay77/extension-androidtools
+          haxelib git hxCodec https://github.com/JonnyCatMeow/hxCodec-old.git
           haxelib install hxcpp-debug-server
           haxelib list
       - name: Create Version Tag
